fix: fixed overflow issue

--- a/44frontend/src/pages/Home/DiscographyPanel/DiscographyPanel.module.scss
+++ b/44frontend/src/pages/Home/DiscographyPanel/DiscographyPanel.module.scss
@@ -9,8 +9,9 @@
   height: 85%;
   background-color: themeColors.$default_foreground;
   transition: 0.3s;
-  z-index: 1;
+  z-index: 2;
   padding-top: 1em;
+  padding-bottom: 5em;
 
   .top {
     width: 100%;
@@ -35,7 +36,7 @@
     justify-content: center;
 
     .inner__container {
-      overflow: scroll;
+      overflow-y: scroll;
       max-width: 1080px;
       //   height: 100%;
       display: grid;
